--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -31,12 +31,11 @@
       {% endif %}
     </h2>
     <p class="page__meta">
-      {% if post.last_modified_at %}
-        <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.last_modified_at | date: "%Y-%m-%d" }}">{{ post.last_modified_at | date: "%B %d, %Y" }}</time>&emsp;
-      {% elsif post.date %}
+      {% if post.date %}
         <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y " }}</time>&emsp;
       {% endif %}
-      {% if post.read_time %}<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{% include read-time.html %}{% endif %}
+      {% if post.read_time %}<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{% include read-time.html %}
+      {% endif %}
     </p>
 
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{% if post.header.teaser_home_page %}<img src="{{ post.header.teaser }}" alt="" style="float: right;margin-right:10px; margin-left:20px; margin-bottom:10px; height:120px;">{% endif %}{{ post.excerpt | markdownify | strip_html | truncate: 1024 }}</p>{% endif %}
