--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,4 +1,4 @@
-{% if post.header.teaser %}
+{% if post.header.teaser %}                                                                                                                                   
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
   {% assign teaser = site.teaser %}
@@ -30,18 +30,14 @@
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    <p class="page__meta">
-      {% if post.date %}
-        <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y " }}</time>&emsp;
-      {% endif %}
-      {% if post.read_time %}<i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;{% include read-time.html %}
-      {% endif %}
-    </p>
 
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{% if post.header.teaser_home_page %}<img src="{{ post.header.teaser }}" alt="" style="float: right;margin-right:10px; margin-left:20px; margin-bottom:10px; height:120px;">{% endif %}{{ post.excerpt | markdownify | strip_html | truncate: 1024 }}</p>{% endif %}
-    <i class="fas fa-tags"></i>
-    {% for tag in post.tags %}
-      <a href="/tags/#{{ tag }}" class="page__meta btn" rel="tag">{{ tag }}</a>
-    {% endfor %}
+    <p class="page__meta">
+    {% if post.date %}
+        <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y " }}</time>&emsp;
+    {% endif %}
+    {% if post.read_time %}
+      <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+    {% endif %}
+    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
 </div>
