--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,22 +7,22 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 
 /* sunrise syntax highlighting (base16) */
-$base00: #1d1f21;
-$base01: #282a2e;
-$base02: #373b41;
-$base03: #969896;
-$base04: #b4b7b4;
-$base05: #c5c8c6;
-$base06: #e0e0e0;
-$base07: #ffffff;
-$base08: #cc6666;
-$base09: #de935f;
-$base0a: #f0c674;
-$base0b: #b5bd68;
-$base0c: #8abeb7;
-$base0d: #81a2be;
-$base0e: #b294bb;
-$base0f: #a3685a;
+$base00: #1d1f21 !important;
+$base01: #282a2e !important;
+$base02: #373b41 !important;
+$base03: #969896 !important;
+$base04: #b4b7b4 !important;
+$base05: #c5c8c6 !important;
+$base06: #e0e0e0 !important;
+$base07: #ffffff !important;
+$base08: #cc6666 !important;
+$base09: #de935f !important;
+$base0a: #f0c674 !important;
+$base0b: #b5bd68 !important;
+$base0c: #8abeb7 !important;
+$base0d: #81a2be !important;
+$base0e: #b294bb !important;
+$base0f: #a3685a !important;
 
 @import "minimal-mistakes"; // main partials
 
